--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -14,10 +14,10 @@
 
 <!-- 수정/삭제 -->
 <div>
-    <a th:href="@{'/post/edit/' + ${postsDto.id}}">
+    <a th:href="@{'/posts/edit/' + ${postsDto.id}}">
         <button>수정</button>
     </a>
-    <form id="delete-form" th:action="@{'/post/' + ${postsDto.id}}" method="post">
+    <form id="delete-form" th:action="@{'/posts/' + ${postsDto.id}}" method="post">
         <input type="hidden" name="_method" value="delete"/>
         <button id="delete-btn">삭제</button>
     </form>
